--- a/references.bib
+++ b/references.bib
@@ -4714,3 +4714,43 @@ title = {{Genome-wide association study SNPS in the human genome diversity proje
 volume = {7},
 year = {2011}
 }
+
+@article{Shen2005,
+abstract = {We have developed a flexible, accurate and highly multiplexed SNP genotyping assay for high-throughput genetic analysis of large populations on a bead array platform. The novel genotyping system combines high assay conversion rate and data quality with {\textgreater}1500 multiplexing, and Array of Arrays™ formats. Genotyping assay oligos corresponding to specific SNP sequences are each linked to a unique sequence (address) that can hybridize to its complementary strand on universal arrays. The arrays are made of beads located in microwells of optical fiber bundles (Sentrix{\textregistered}Array Matrix) or silicon slides (Sentrix BeadChip). The optical fiber bundles are further organized into a matrix that matches a 96-well microtiter plate. The arrays on the silicon slides are multi-channel pipette compatible for loading multiple samples onto a single silicon slide. These formats allow many samples to be processed in parallel. This genotyping system enables investigators to generate approximately 300,000 genotypes per day with minimal equipment requirements and greater than 1.6 million genotypes per day in a robotics-assisted process. With a streamlined and comprehensive assay, this system brings a new level of flexibility, throughput, and affordability to genetic research. {\textcopyright} 2005 Elsevier B.V. All rights reserved.},
+author = {Shen, Richard and Fan, Jian Bing and Campbell, Derek and Chang, Weihua and Chen, Jing and Doucet, Dennis and Yeakley, Jo and Bibikova, Marina and Garcia, Eliza Wickham and McBride, Celeste and Steemers, Frank and Garcia, Francisco and Kermani, Bahram G. and Gunderson, Kevin and Oliphant, Arnold},
+doi = {10.1016/j.mrfmmm.2004.07.022},
+file = {:home/murraycadzow/Dropbox/Papers/High-throughput{\_}SNP{\_}genotyping{\_}on{\_}univer.pdf:pdf},
+isbn = {0027-5107 (Print)$\backslash$r0027-5107 (Linking)},
+issn = {00275107},
+journal = {Mutation Research - Fundamental and Molecular Mechanisms of Mutagenesis},
+keywords = {BeadArray,Genotyping,Microarray,SNP},
+number = {1-2},
+pages = {70--82},
+pmid = {15829238},
+title = {{High-throughput SNP genotyping on universal bead arrays}},
+volume = {573},
+year = {2005}
+}
+
+@article{stouffer1949american,
+author = {Stouffer, Samuel A and Suchman, Edward A and DeVinney, Leland C and Star, Shirley A and {Williams Jr}, Robin M},
+publisher = {Princeton Univ. Press},
+title = {{The American soldier: Adjustment during army life.(Studies in social psychology in World War II), Vol. 1}},
+year = {1949}
+}
+
+@article{Zaykin2011,
+author = {Zaykin, D. V.},
+doi = {10.1111/j.1420-9101.2011.02297.x},
+file = {:home/murraycadzow/Dropbox/Papers/nihms291016.pdf:pdf},
+issn = {1010061X},
+journal = {Journal of Evolutionary Biology},
+keywords = {combining p -values,meta-analysis},
+month = {aug},
+number = {8},
+pages = {1836--1841},
+title = {{Optimally weighted Z-test is a powerful method for combining probabilities in meta-analysis}},
+url = {http://doi.wiley.com/10.1111/j.1420-9101.2011.02297.x},
+volume = {24},
+year = {2011}
+}
