added some extra refs to fill in some of Mik's comments

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -30,7 +30,7 @@ Obesity is defined as a \gls{bmi} of >30 kg/m^2^ and is a contributing risk fact
 
 ### Hyperuricaemia and gout
 
-Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M\tex{\={a}}ori and Pacific ethnicities have a prevalence of 12% and 14% ,respectively, in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013]. While New Zealand M\tex{\={a}}ori and Pacific people have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
+Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M\tex{\={a}}ori and Pacific ethnicities have a prevalence of 12% and 14%, respectively, in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013]. While New Zealand M\tex{\={a}}ori and Pacific people have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
 
 
 
@@ -225,13 +225,13 @@ meta\-SS = \frac{\sum\limits_{i =1}^k {\omega_i Z_i}}{\sqrt{\sum\limits_{i =1}^k
 
 ### Power
 
-Power to detect selected sites can be very limited if the site is not an outlier from empirical methods [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
+Power to detect selected sites can be very limited if the site is not an outlier from empirical methods, as they won't 'stand out' [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
 
 Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have the best power for detecting moderately ancestral severe bottlenecks [@Depaulis2003], whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008].
 
 ### Challenges
 
-When scanning genome-wide in a population (such as in a \gls{gwas}, or genome-wide selection scan), the variability in the genome also has population demographic events that have acted upon it, such as population bottlenecks, migration, or growth. Mutation and recombination are also acting on the genome. Methods based on comparing non-synonymous to synonymous variants are relatively unaffected, but, methods based on allele frequency are susceptible to detecting population demographic events along with mutation and recombination rate changes [@Nielsen2009]. Bottlenecks with a meta-population model can lead to a high frequency of derived alleles, greater than would be expected to arise through a neutral model [@Jensen2005].  As previously mentioned by @fay2000hitchhiking about high frequency derived alleles being a unique signature of selection, it not actually unique [@Przeworski2002]. A meta population is a population which can be subdivided into many different sub-populations among which there is some pattern of migration, extinction, and recolonization [@Wakeley2001].
+When scanning genome-wide in a population (such as in a \gls{gwas}, or genome-wide selection scan), the variability in the genome also has population demographic events that have acted upon it, such as population bottlenecks, migration, or growth. Mutation and recombination are also acting on the genome. Methods based on comparing non-synonymous to synonymous variants are relatively unaffected, but, methods based on allele frequency are susceptible to detecting population demographic events, along with mutation and recombination rate changes [@Nielsen2009].  A meta population is a population which can be subdivided into many different sub-populations among which there is some pattern of migration, extinction, and recolonization [@Wakeley2001]. Bottlenecks with a meta-population model can lead to a high frequency of derived alleles, greater than would be expected to arise through a neutral model [@Jensen2005] and as previously mentioned by @fay2000hitchhiking about high frequency derived alleles being a unique signature of selection, it not actually unique [@Przeworski2002].
 
 \Gls{snp} ascertainment bias is caused by the non-random sampling of SNPs on array chips. This is a problem that affects the selection detection methods to different extents, with frequency spectrum methods being the most susceptible. \Gls{td} is biased upwards due to the \gls{snp} discovery process having ascertainment biases, which leads to an excess of intermediate frequency alleles in the sample [@Kelley2006]. Tests that rely on long haplotypes are less susceptible to ascertainment bias [@sabeti2006positive] but because long haplotypes can be quickly broken down through recombination, they are only useful for short time periods. \Gls{snp} ascertainment bias can be overcome with 
 the use of whole genome sequencing [@Albrechtsen2010]. 
@@ -240,7 +240,7 @@ Many of these statistics were developed to investigate selection at a particular
 
 Identification of exactly what is deemed as being "significantly selected"" has issues. The current practice is to take outlier loci, usually from an empirical distribution of the selection statistic and report these as significant. This is not necessarily indicative of selection, as cut off levels are created subjectively rather than derived from the model [@Qanbari2012a]. Using an empirical approach will result in many false positives, however this is considered an acceptable approach for selecting candidate genes so long as it is realised that the false positive rate is high [@Kelley2006].
 
-In order to use haplotypic methods, (re)construction of haplotypes is required. Currently this involves the need for the phasing of haplotypes from genomic data. Phasing is the process of determining which alleles are found together on the same physical chromosomes. There are a number of ways that this can be done, such as through a pedigree, through the use of large population data, or using the reads from next generation sequencing. Phasing through pedigree information is utilised in most agricultural species, whereas for human populations the population genotypes are largely from unrelated individuals. Phasing of unrelated individuals currently relies on probabilistic methods [@Browning2009; @Delaneau2012; @Delaneau2013] in order to make the best guess at each individual haplotype. Newer methods have been developed to use the reads from next generation sequencing, and are able to trace a haplotype across multiple overlapping reads, however these methods are heavily dependent on the depth of coverage. The read-backed phasing can also be used to complement probabilistic phasing methods.
+In order to use haplotypic methods, (re)construction of haplotypes is required. Currently this involves the need for the phasing of haplotypes from genomic data. Phasing is the process of determining which alleles are found together on the same physical chromosomes. There are a number of ways that this can be done, such as through a pedigree, through the use of large population data, or using the reads from next generation sequencing. Phasing through pedigree information is utilised in most agricultural species, whereas for human populations the population genotypes are largely from unrelated individuals. Phasing of unrelated individuals currently relies on probabilistic methods [@Browning2009; @Delaneau2012; @Delaneau2013] in order to make the best guess at each individual haplotype. Newer methods have been developed to use the reads from next generation sequencing, and are able to trace a haplotype across multiple overlapping reads and be used to complement other probabilistic phasing methods, however these read-backed methods are dependent on the depth of coverage and read quality [@Delaneau2014].
 
 
 ## Improving GWAS
